--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "milsymbol": "^2.0.0",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
