--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^4.3.1",
     "sequelize": "^5.21.10",
     "serve-favicon": "^2.5.0"
   },
