--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.3.4",
+    "react-dropzone-uploader": "^2.11.0",
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.11.0",
     "react-owl-carousel": "^2.3.3",
