--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-feather": "^2.0.9",
     "react-hook-form": "^7.11.0",
     "react-owl-carousel": "^2.3.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
