--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.4.2",
     "milsymbol": "^2.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.5",
@@ -43,6 +44,7 @@
     "nodemon": "^2.0.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.3.4",
     "react-dropzone-uploader": "^2.11.0",
