--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/modifiers": "^6.0.1",
-    "@dnd-kit/sortable": "^7.0.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -29,6 +26,8 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^5.3.0",
     "concurrently": "^3.5.1",
+    "currency-codes": "^2.1.0",
+    "currency-symbol-map": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
@@ -48,6 +47,7 @@
     "nodemon": "^2.0.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.3.4",
