something is wrong here

--- a/package.json
+++ b/package.json
@@ -4,65 +4,65 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.1",
-    "@reduxjs/toolkit": "^1.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@tiptap/extension-color": "^2.0.4",
-    "@tiptap/extension-placeholder": "^2.0.4",
-    "@tiptap/extension-text-style": "^2.0.4",
-    "@tiptap/extension-underline": "^2.0.4",
-    "@tiptap/pm": "^2.0.4",
-    "@tiptap/react": "^2.0.4",
-    "@tiptap/starter-kit": "^2.0.4",
-    "axios": "^0.19.2",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^5.3.0",
-    "concurrently": "^3.5.1",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@tiptap/extension-color": "^2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.13",
+    "@tiptap/extension-text-style": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/react": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
     "currency-codes": "^2.1.0",
     "currency-symbol-map": "^5.1.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.16.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
-    "html-react-parser": "^4.2.0",
-    "http-proxy-middleware": "^0.19.1",
-    "jquery": "^3.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
-    "luxon": "^3.4.2",
-    "milsymbol": "^2.0.0",
-    "moment": "^2.29.1",
-    "mongoose": "^5.12.5",
+    "html-react-parser": "^5.0.7",
+    "http-proxy-middleware": "^2.0.6",
+    "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "luxon": "^3.4.4",
+    "milsymbol": "^2.2.0",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "*",
-    "mysql": "^2.15.0",
-    "mysql2": "^2.1.0",
-    "nodemon": "^2.0.7",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.5",
+    "nodemon": "^3.0.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-bootstrap-typeahead": "^6.2.3",
-    "react-calendar": "^4.6.0",
+    "react-bootstrap": "^2.9.1",
+    "react-bootstrap-typeahead": "^6.3.2",
+    "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^11.3.4",
+    "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
-    "react-feather": "^2.0.9",
-    "react-hook-form": "^7.11.0",
-    "react-icons": "^4.10.1",
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^7.2.4",
-    "react-router": "^6.14.1",
-    "react-router-dom": "^6.14.1",
+    "react-redux": "^9.0.4",
+    "react-router": "^6.21.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "react-select": "^4.3.1",
-    "sequelize": "^5.21.10",
+    "react-select": "^5.8.0",
+    "sequelize": "^6.35.2",
     "serve-favicon": "^2.5.0"
   },
   "scripts": {
@@ -89,17 +89,18 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
-    "babel-loader": "^8.3.0",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "ajv": "^7.2.4",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.5.3",
-    "sass": "^1.66.1",
-    "sass-loader": "^12.6.0",
+    "html-webpack-plugin": "^5.5.4",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.2",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
