--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.1",
+    "@mui/material": "^5.15.0",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.8",
+    "@mui/x-date-pickers": "^6.18.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
@@ -28,6 +33,7 @@
     "concurrently": "^8.2.2",
     "currency-codes": "^2.1.0",
     "currency-symbol-map": "^5.1.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
@@ -63,7 +69,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "sequelize": "^6.35.2",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "styled-components": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
