--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-calendar": "^4.7.0",
@@ -72,6 +73,8 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "sequelize": "^6.35.2",
     "serve-favicon": "^2.5.0",
     "styled-components": "^6.1.1"
