--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-select": "^5.8.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "react-toastify": "^9.1.3",
     "sequelize": "^6.35.2",
     "serve-favicon": "^2.5.0",
     "styled-components": "^6.1.1"
