--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@faker-js/faker": "^8.3.1",
     "ajv": "^7.2.4",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
