--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@hookform/error-message": "^2.0.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
@@ -53,6 +58,7 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "mui-daterange-picker-plus": "^1.0.4",
     "multer": "*",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
