added new-recipe form layout

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@tinymce/tinymce-react": "^5.0.1",
     "@tiptap/extension-color": "^2.1.13",
     "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/extension-text-style": "^2.1.13",
