--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-redux": "^9.0.4",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
