--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "styled-components": "^6.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --max_old_space_size=10096  start",
+    "build": "react-scripts --max_old_space_size=10096  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "webpack serve --mode development",
