--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://foodie-zqad.onrender.com/",
+  "proxy": "http://localhost:8670/",
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -68,6 +68,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
+    "react-player": "^2.16.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.0.4",
     "react-router": "^6.21.0",
