--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@mui/x-data-grid-generator": "^6.18.6",
     "@mui/x-date-pickers": "^6.18.5",
     "@react-google-maps/api": "^2.19.2",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
@@ -68,6 +70,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
+    "react-pdf": "^8.0.2",
     "react-player": "^2.16.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.0.4",
