--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
     "html-react-parser": "^5.0.7",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.4.4",
     "milsymbol": "^2.2.0",
