--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^9.1.3",
     "serve-favicon": "^2.5.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1"
   },
   "scripts": {
