--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
+    "gapi-script": "^1.2.0",
     "html-react-parser": "^5.0.7",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
@@ -69,6 +70,7 @@
     "react-dropzone": "^14.2.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-feather": "^2.0.10",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
