--- a/package.json
+++ b/package.json
@@ -93,9 +93,7 @@
     "start": "react-scripts --max_old_space_size=10096  start",
     "build": "react-scripts --max_old_space_size=10096  build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "webpack serve --mode development",
-    "webpackbuild": "webpack --mode production"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -123,12 +121,7 @@
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.4",
     "react-error-overlay": "^6.0.9",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "url-loader": "^4.1.1"
   }
 }
