--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-calendar": "^4.7.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -86,6 +87,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^9.1.3",
     "serve-favicon": "^2.5.0",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.1"
   },
