--- a/package.json
+++ b/package.json
@@ -124,6 +124,11 @@
     "html-webpack-plugin": "^5.5.4",
     "react-error-overlay": "^6.0.9",
     "style-loader": "^3.3.3",
-    "url-loader": "^4.1.1"
+    "url-loader": "^4.1.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
