--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-share": "^5.1.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "react-toastify": "^9.1.3",
@@ -123,10 +124,10 @@
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.4",
     "react-error-overlay": "^6.0.9",
-    "style-loader": "^3.3.3",
-    "url-loader": "^4.1.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
