--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-feather": "^2.0.10",
     "react-google-login": "^5.2.2",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-owl-carousel": "^2.3.3",
